adds regeneration and delete of passwords
