# password-handler-back-end/src/backend_api/service/PasswordService.js
@@ -84,3 +84,73 @@ exports.decryptPassword = function (body, uname, userToken) {
   });
 }
 
+
+exports.regeneratePassword = function (body, uname, userToken) {
+  return new Promise(function (resolve, reject) {
+    let masterpwd = body["password"];
+    let website_url = body["website_url"];
+    let website_uname = body["website_uname"];
+    backEndHandler.regeneratePassword(masterpwd, website_url, website_uname, uname, userToken, (result) => {
+      if (result instanceof ServerErrors.InvalidToken) {
+        reject(403);
+        return;
+      }
+      if (result instanceof ServerErrors.WrongMasterPassword) {
+        reject(403);
+        return;
+      }
+      if (result instanceof ServerErrors.NoPasswordFound) {
+        reject(404);
+        return;
+      }
+      if (result instanceof ServerErrors.InternalServerError) {
+        reject(500);
+        return;
+      }
+
+      if (result instanceof ServerErrors.ServerError) {
+        reject(500);
+        return;
+      }
+      let response = {
+        "website_url": website_url,
+        "website_uname": website_uname,
+        "website_password": result
+      }
+      resolve(response);
+    });
+  });
+}
+
+exports.deletePassword = function (body, uname, userToken) {
+  return new Promise(function (resolve, reject) {
+    let masterpwd = body["password"];
+    let website_url = body["website_url"];
+    let website_uname = body["website_uname"];
+    backEndHandler.deletePassword(masterpwd, website_url, website_uname, uname, userToken, (result) => {
+      if (result instanceof ServerErrors.InvalidToken) {
+        reject(403);
+        return;
+      }
+      if (result instanceof ServerErrors.WrongMasterPassword) {
+        reject(403);
+        return;
+      }
+      if (result instanceof ServerErrors.NoPasswordFound) {
+        reject(404);
+        return;
+      }
+      if (result instanceof ServerErrors.InternalServerError) {
+        reject(500);
+        return;
+      }
+
+      if (result instanceof ServerErrors.ServerError) {
+        reject(500);
+        return;
+      }
+
+      resolve(200);
+    });
+  });
+}
